# project.fast.ai

./: .gitignore  Dockerfile  README.md  pyproject.toml
photo_download_url_finder/: .env.example  README.md  __main__.py
photo_sandbox/: README.md  __main__.py
photo_sandbox/tasks/: fetch_photo_urls_from_photo_ids.py  initialize_gphoto_spy.py  write_file_of_photo_ids_from_album.py  write_file_of_photo_ids_since_sept_2018.py
