[tool.poetry]
name = "project.fast.ai"
version = "0.1.0"
description = "A collection of little utility modules that I'm developing while taking the course.fast.ai MOOC"
authors = ["Jonathan Mohrbacher"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gphotospy = "^0.2.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
pre-commit = "^2.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
